--- a/Wonderful/Base.lproj/Main.storyboard
+++ b/Wonderful/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="5pU-Na-pcx">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Notifications-->
@@ -21,21 +21,39 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9QP-I3-qcx">
-                                            <rect key="frame" x="20" y="15" width="560" height="57"/>
+                                            <rect key="frame" x="20" y="15" width="527" height="57"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Favorited" translatesAutoresizingMaskIntoConstraints="NO" id="p2v-AK-bBL">
+                                            <rect key="frame" x="567" y="37" width="15" height="13"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="15" id="HcY-Vw-64Q"/>
+                                                <constraint firstAttribute="height" constant="13" id="fWp-Ge-QbM"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="p2v-AK-bBL" secondAttribute="trailing" constant="10" id="KhM-Y6-p3c"/>
+                                        <constraint firstItem="p2v-AK-bBL" firstAttribute="leading" secondItem="9QP-I3-qcx" secondAttribute="trailing" constant="20" id="L9O-ZH-T4c"/>
+                                        <constraint firstItem="p2v-AK-bBL" firstAttribute="top" secondItem="cgY-AF-x78" secondAttribute="top" constant="15" id="QNS-jU-mdH"/>
                                         <constraint firstItem="9QP-I3-qcx" firstAttribute="top" secondItem="cgY-AF-x78" secondAttribute="top" constant="15" id="QXO-zE-PF4"/>
                                         <constraint firstAttribute="bottom" secondItem="9QP-I3-qcx" secondAttribute="bottom" constant="15" id="TQF-UX-Vhm"/>
                                         <constraint firstAttribute="trailing" secondItem="9QP-I3-qcx" secondAttribute="trailing" constant="20" id="dkb-HQ-SZ0"/>
+                                        <constraint firstAttribute="centerY" secondItem="p2v-AK-bBL" secondAttribute="centerY" id="eTf-1V-cho"/>
                                         <constraint firstItem="9QP-I3-qcx" firstAttribute="leading" secondItem="cgY-AF-x78" secondAttribute="leading" constant="20" id="v2y-x7-d3B"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="constraints">
+                                            <exclude reference="dkb-HQ-SZ0"/>
+                                            <exclude reference="QNS-jU-mdH"/>
+                                        </mask>
+                                    </variation>
                                 </tableViewCellContentView>
                                 <rect key="contentStretch" x="0.0" y="0.0" width="1" height="0.0"/>
                                 <connections>
+                                    <outlet property="favoritedIcon" destination="p2v-AK-bBL" id="ZWS-Ij-SHH"/>
                                     <outlet property="messageLabel" destination="9QP-I3-qcx" id="GsI-VJ-989"/>
                                 </connections>
                             </tableViewCell>
@@ -47,10 +65,76 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Notifications" id="yvS-UD-ph6"/>
+                    <connections>
+                        <segue destination="uIm-TJ-NoU" kind="presentation" identifier="addressBookModalSegue" id="7ok-LG-ZS6"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uT3-RI-qnp" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1120" y="493"/>
+        </scene>
+        <!--Share with-->
+        <scene sceneID="3LX-HP-hQM">
+            <objects>
+                <tableViewController title="Share with" id="vCW-UH-qvX" customClass="AddressBookController" customModule="Wonderful" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="ICP-2Z-hVG">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <searchBar key="tableHeaderView" contentMode="redraw" id="9pT-gs-RbB">
+                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <outlet property="delegate" destination="vCW-UH-qvX" id="ars-n0-UdK"/>
+                            </connections>
+                        </searchBar>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="addressBookPersonCellIdentifier" id="9eC-jh-ys0">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9eC-jh-ys0" id="u79-HG-VgI">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="vCW-UH-qvX" id="MEn-Ld-Bfl"/>
+                            <outlet property="delegate" destination="vCW-UH-qvX" id="b61-6N-NeL"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Share with" id="FH9-te-Nkj"/>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="0zc-R6-haN" id="OoN-JU-5QJ"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5ji-Px-G4n" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="0zc-R6-haN">
+                    <connections>
+                        <outlet property="delegate" destination="vCW-UH-qvX" id="rb8-B5-Izd"/>
+                        <outlet property="searchBar" destination="9pT-gs-RbB" id="LeS-Gp-CB1"/>
+                        <outlet property="searchContentsController" destination="vCW-UH-qvX" id="5b5-Lt-3MS"/>
+                        <outlet property="searchResultsDataSource" destination="vCW-UH-qvX" id="d5H-jK-Jxn"/>
+                        <outlet property="searchResultsDelegate" destination="vCW-UH-qvX" id="A1Z-0L-9KG"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="1940" y="1440"/>
+        </scene>
+        <!--Address Book-->
+        <scene sceneID="h62-z8-b3N">
+            <objects>
+                <navigationController title="Address Book" id="uIm-TJ-NoU" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="a8o-Cf-vbW">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="vCW-UH-qvX" kind="relationship" relationship="rootViewController" id="zFh-mC-45n"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="w6y-eZ-7ST" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1120" y="1440"/>
         </scene>
         <!--Notifications-->
         <scene sceneID="zm4-be-1Cz">
@@ -69,4 +153,7 @@
             <point key="canvasLocation" x="300" y="492"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Favorited" width="44" height="38"/>
+    </resources>
 </document>
